STRETCH Assignment: digital timer - select elements by ID - create start and stop button on HTML select by id - declare variable interval to store interval and running to store status    of the timer - create function to update element textContent to 0 value - create function to add color class if running === false and remove if false - create stop function to clear interval, enable start button and set    running to false - create reset function to stop timer, set values to zero and    change color to black - create a function timer that returns a function and increments the timers values - add a click event listener on start button that sets the interval   and disables the start button - add click event listener on reset button that call the reset function when clicked - style timer

--- a/stretch-assignment/digital_timer/styles.css
+++ b/stretch-assignment/digital_timer/styles.css
@@ -1,14 +1,43 @@
+*, html {
+  box-sizing: border-box
+}
+
 body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #FFF8E8;
+}
+
+.digits {
+  border: 1px solid #847E89;
+  border-radius: 10px;
+  padding: 50px;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
 
 .digit {
   display: inline-block;
   font-size: 80px;
+  color: #000;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.5s;
+  padding: 10px;
 }
 
 .redDigit {
   color: red;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.buttons button {
+  padding: 10px 20px;
+  border-radius: 5px;
+  margin: 20px;
+  font-size: 20px;
 }
